Update Docker image name in workflow

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-  DOCKER_IMAGE_NAME: your-dockerhub-username/your-app-name
+  DOCKER_IMAGE_NAME: suyash01/splitease
 
 jobs:
   build-unstable:
